# MicroVis

file_reading_services/proto/: CMakeLists.txt  FileInfo.proto  FileService.proto  FitsReaderService.proto  H5ReaderService.proto  Histogram.proto  ImageData.proto  SpatialProfile.proto  defs.proto
hdf5_reader_service/: CMakeLists.txt  H5Reader.cpp  H5Reader.h  README.md  ReaderStats.py  clear.sh  hdf5_file_reader.cpp  run.sh  view.py
hdf5_reader_service/Expirmentation/H5_Expri/: H5Reader.cpp  H5Reader.h  Histo.py  test.py  test.txt  view.py
hdf5_reader_service/Expirmentation/gRPC streaming/: CMakeLists.txt
hdf5_reader_service/Expirmentation/gRPC streaming/controller/: client.js  package-lock.json  package.json
hdf5_reader_service/Expirmentation/gRPC streaming/proto/: CMakeLists.txt  stream.proto
hdf5_reader_service/Expirmentation/gRPC streaming/service/: CMakeLists.txt  stream.cpp
hdf5_reader_service/Expirmentation/gRPC_Expri/files/: h5.hdf5
hdf5_reader_service/H5_Expri/: H5Reader.cpp  test.py  view.py
hdf5_reader_service/H5_Microservice_Reader/: CMakeLists.txt  ReadMe.md  makeRel.sh  run.sh
hdf5_reader_service/H5_Microservice_Reader/Service/: CMakeLists.txt
hdf5_reader_service/H5_Microservice_Reader/Service/src/: H5Service.cpp  H5Service.h  main.cpp
hdf5_reader_service/H5_Microservice_Reader/controller/: .gitignore  index.ts  ingres.ts  package-lock.json  package.json  tsconfig.json
hdf5_reader_service/H5_Microservice_Reader/controller/src/: H5Reader.ts  ReaderController.ts
hdf5_reader_service/H5_Microservice_Reader/controller/src/H5Service/: H5Reader.ts  H5Services.ts  H5WorkerPool.ts
hdf5_reader_service/H5_Microservice_Reader/controller/src/Services/: H5Reader.ts  H5Services.ts  Hdf5WorkerPool.ts  ReaderController.ts
hdf5_reader_service/H5_Microservice_Reader/files/: Test
hdf5_reader_service/H5_Microservice_Reader/ingres/: package.json  tsconfig.json
hdf5_reader_service/H5_Microservice_Reader/ingres/src/: index.ts  ingres.ts
hdf5_reader_service/H5_Microservice_Reader/proto/: CMakeLists.txt  H5ReaderService.proto  H5ReaderServices.proto  ImageData.proto  OpenFile.proto  SpectralProfile.proto  defs.proto  dumy.proto  proto_ts.sh  submessage.proto
hdf5_reader_service/H5_Microservice_Reader/src/: H5Service.cpp  H5Service.h  main.cpp
hdf5_reader_service/SpectralProfileService/: make.sh  run.sh
hdf5_reader_service/SpectralProfileService/src/: CMakeLists.txt  main.cpp
hdf5_reader_service/SpectralProfileService/src/Service/: SpectralProfileService.cpp  SpectralProfileService.h
hdf5_reader_service/fits_Reader_Microservice/: CMakeLists.txt  fits_proto  proto  run.sh
hdf5_reader_service/fits_Reader_Microservice/controller/: .gitignore  package.json
hdf5_reader_service/fits_Reader_Microservice/controller/src/: index.ts
hdf5_reader_service/fits_Reader_Microservice/worker/: CMakeLists.txt
hdf5_reader_service/fits_Reader_Microservice/worker/src/: main.cpp
hdf5_reader_service/fits_proto/: CMakeLists.txt  FileInfo.proto  FileService.proto  FitsReaderService.proto  Histogram.proto  ImageData.proto  OpenFile.proto  Region.proto  SpatialProfile.proto  SpectralProfile.proto  defs.proto  proto_ts.sh
hdf5_reader_service/gRPC_Expri/: CMakeLists.txt  run.sh
hdf5_reader_service/gRPC_Expri/proto/: hello.proto
hdf5_reader_service/gRPC_Expri/src/: server.cpp
hdf5_reader_service/h5_Reader_Microservice/: CMakeLists.txt  Release.sh  run.sh
hdf5_reader_service/h5_Reader_Microservice/Service/: CMakeLists.txt
hdf5_reader_service/h5_Reader_Microservice/Service/src/: H5Service.cpp  H5Service.h  main.cpp
hdf5_reader_service/h5_Reader_Microservice/controller/: hdf5_proto  index.ts  ingres.ts  package-lock.json  package.json
hdf5_reader_service/hdf5_proto/: CMakeLists.txt  FileInfo.proto  FileService.proto  H5ReaderService.proto  Histogram.proto  ImageData.proto  OpenFile.proto  Region.proto  SpatialProfile.proto  SpectralProfile.proto  defs.proto  proto_ts.sh
hdf5_reader_service/ingres/: package-lock.json  package.json
hdf5_reader_service/ingres/src/: FileServiceConn.ts  index.ts  ingres advanced.ts  ingres.ts
hdf5_reader_service/ingres/src/tests/: FileReading .test.ts  SpectralProfile.test.ts
hdf5_reader_service/ingres/src/utils/: files.ts
hdf5_reader_service/proto/: CMakeLists.txt  FileService.proto  FitsReaderService.proto  H5ReaderService.proto  ImageData.proto  OpenFile.proto  Region.proto  SpatialProfile.proto  SpectralProfile.proto  SpectralProfileService.proto  defs.proto  proto_ts.sh
ryan_testing/grpc_test/: .gitignore  CMakeLists.txt  ReadMe.md  clear.sh  run.sh  runCompression.sh  runContouring.sh  runSmoothing.sh
ryan_testing/grpc_test/Ingress_Node/: compression_controller_1.ts  compression_controller_16.ts  compression_controller_4.ts  contour_smooth_controller_1.ts  contour_smooth_controller_16.ts  contour_smooth_controller_4.ts  contouring_controller.ts  package-lock.json
ryan_testing/grpc_test/Ingress_Node/proto/: contouring.ts  smoothing.ts
ryan_testing/grpc_test/Service/: CMakeLists.txt
ryan_testing/grpc_test/Service/src/: client.cpp  server.cpp
ryan_testing/grpc_test/client/: CMakeLists.txt  client.cpp
ryan_testing/grpc_test/controller/: compression_controller.js  compression_controller.ts  contour_smooth_controller.ts  contouring_controller.js  contouring_controller.ts  package-lock.json  package.json  proto_ts.sh  smoothing_controller.js  smoothing_controller.ts  tsconfig.json
ryan_testing/grpc_test/controller/proto/: compression.js  compression.ts  contouring.js  contouring.ts  smoothing.js  smoothing.ts
ryan_testing/grpc_test/proto/: CMakeLists.txt  compression.proto  contouring.proto  hello.proto  helloworld.proto  smoothing.proto
ryan_testing/grpc_test/server/: CMakeLists.txt  server.cpp
ryan_testing/grpc_test/src/: Compression.cpp  Compression.h  CompressionService.cpp  Contouring.cpp  Contouring.h  ContouringService.cpp  Smoothing.cpp  SmoothingService.cpp  server.cpp  test_openmp.cpp
ryan_testing/mono_testing/: CMakeLists.txt  Compression.cpp  Contouring.cpp  Smoothing.cpp
(+78 files in other folders)
